Try to work around QTBUG-62946

(still crashes)